--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>
-            World Clock
+            World Clocks
         </h1>
 
 
@@ -25,20 +25,24 @@
         </select>
 
         <div class="city">
-            <h2> Los Angeles </h2>
-            <div class="date"> April 11 2023 </div>
-            <div class="time"></div>
+            <div>
+                <h2> Los Angeles </h2>
+                <div class="date"> April 11 2023 </div>
+            </div>
+            <div class="time">06:32:15 <small>AM</small></div>
         </div>
 
         <div class="city">
-            <h2> Sydney </h2>
-            <div class="date"> April 11 2023 </div>
-            <div class="time"></div>
+            <div>
+                <h2> Sydney </h2>
+                <div class="date"> April 11 2023 </div>
+            </div>
+            <div class="time">06:32:15 <small>AM</small></div>
         </div>
     </div>
     </div>
     <footer>
-        Coded with ♥ by GG - <a href="https://github.com/GG-va/World-Clock-Project" target="_blank">open sourced on
+        Coded with ♥ by <strong> GG </strong> - <a href="https://github.com/GG-va/World-Clock-Project" target="_blank">open sourced on
             GitHub</a>.
     </footer>
     <script src="js/index.js"></script>
