--- a/index.html
+++ b/index.html
@@ -19,37 +19,40 @@
         </h1>
 
 
-        <select name="" id="">
+        <select name="" id="city">
             <option value="">Select a city ...</option>
             <option value="">My current location</option>
-            <option value="">New York</option>
-            <option value="">London</option>
-            <option value="">Berlin</option>
+            <option value="America/New_York">New York</option>
+            <option value="Europe/London">London</option>
+            <option value="Europe/Berlin">Berlin</option>
         </select>
 
-        <div class="city" id="zurich">
-            <div>
-                <h2> Zurich </h2>
-                <div class="date"></div>
+        <div id="cities">
+            <div class="city" id="zurich">
+                <div>
+                    <h2> Zurich </h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
             </div>
-            <div class="time"></div>
-        </div>
 
-        <div class="city" id="los-angeles">
-            <div>
-                <h2> Los Angeles </h2>
-                <div class="date"></div>
+            <div class="city" id="los-angeles">
+                <div>
+                    <h2> Los Angeles </h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
             </div>
-            <div class="time"></div>
-        </div>
 
-        <div class="city" id="sydney">
-            <div>
-                <h2> Sydney </h2>
-                <div class="date"></div>
+            <div class="city" id="sydney">
+                <div>
+                    <h2> Sydney </h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
             </div>
-            <div class="time"></div></div>
         </div>
+    </div>
     </div>
     </div>
     <footer>
