--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <option value="America/New_York">New York</option>
             <option value="Europe/London">London</option>
             <option value="Europe/Berlin">Berlin</option>
+            <option value="Pacific/Honolulu">Honolulu</option>
         </select>
 
         <div id="cities">
