--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <select name="" id="city">
             <option value="">Select a city ...</option>
-            <option value="">My current location</option>
+            <option value="current">My current location</option>
             <option value="America/New_York">New York</option>
             <option value="Europe/London">London</option>
             <option value="Europe/Berlin">Berlin</option>
